chore: minor fixes on spacing and comments

--- a/client/chatbotWidget/src/App.css
+++ b/client/chatbotWidget/src/App.css
@@ -40,11 +40,3 @@
 .read-the-docs {
   color: #888;
 }
-
-.centered-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vh;
-}
